--- a/StellaServer/Animation/Details/StoryboardDetailsControl.xaml
+++ b/StellaServer/Animation/Details/StoryboardDetailsControl.xaml
@@ -10,12 +10,23 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <materialDesign:Card Margin="10">
-            <DockPanel Margin="5">
+        <DockPanel Margin="5">
+            <DockPanel DockPanel.Dock="Top">
+
+                <Button DockPanel.Dock="Right" 
+                        x:Name="BackButton"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Content="{materialDesign:PackIcon ArrowBack}"/>
+
                 <TextBlock x:Name="NameTextBlock" 
                            DockPanel.Dock="Top" FontSize="20"/>
-
+            </DockPanel>
+            <DockPanel>
                 <ListView x:Name="AnimationSettingsListView"
                           DockPanel.Dock="Bottom" />
             </DockPanel>
+        </DockPanel>
+       
     </materialDesign:Card>
 </reactiveUi:ReactiveUserControl>
