--- a/StellaServer/Animation/Creation/AnimationCreationControl.xaml
+++ b/StellaServer/Animation/Creation/AnimationCreationControl.xaml
@@ -9,8 +9,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
-    <materialDesign:Card>
-        <DockPanel Margin="10">
+    <materialDesign:Card Margin="10">
+        <DockPanel Margin="5">
             <DockPanel DockPanel.Dock="Top">
 
                 <Button DockPanel.Dock="Right" 
