--- a/VideoMapping/MainWindow.xaml
+++ b/VideoMapping/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<reactiveUi:ReactiveUserControl x:TypeArguments="local:MainWindowViewModel" x:Class="VideoMapping.MainWindow"
+﻿<reactiveUi:ReactiveWindow x:TypeArguments="local:MainWindowViewModel" x:Class="VideoMapping.MainWindow"
                                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,6 +6,7 @@
                                 xmlns:local="clr-namespace:VideoMapping"
                                 xmlns:reactiveUi="http://reactiveui.net"
                                 mc:Ignorable="d"
+                                Title="Video mapping for Stella"
                                 Height="450" Width="800">
     <UniformGrid Columns="2">
         <TextBlock Text="Pixels per row:"/>
@@ -21,4 +22,4 @@
         <TextBlock x:Name="StoryboardFolderTextBlock"/>
 
     </UniformGrid>
-</reactiveUi:ReactiveUserControl>
+</reactiveUi:ReactiveWindow>
