Added input folder setting

--- a/VideoMapping/MainWindow.xaml
+++ b/VideoMapping/MainWindow.xaml
@@ -21,5 +21,8 @@
         <TextBlock Text="Storyboard folder:"/>
         <TextBlock x:Name="StoryboardFolderTextBlock"/>
 
+        <TextBlock Text="Input folder (files should be of type .mp4):"/>
+        <TextBlock x:Name="InputFolderTextBlock"/>
+
     </UniformGrid>
 </reactiveUi:ReactiveWindow>
