Added bpm start pad button

--- a/StellaServer/Midi/MidiPadButton.xaml
+++ b/StellaServer/Midi/MidiPadButton.xaml
@@ -15,6 +15,12 @@
                 <TextBlock x:Name="ControllerIndexTextBlock" DockPanel.Dock="Top"/>
 
                 <TextBlock x:Name="BpmTextBlock" DockPanel.Dock="Bottom"/>
+
+                <Button x:Name="PlayButton" 
+                        DockPanel.Dock="Top"/>
+
+            
+
             </DockPanel>
 
             
