--- a/StellaServer/Midi/MidiPadButton.xaml
+++ b/StellaServer/Midi/MidiPadButton.xaml
@@ -11,13 +11,7 @@
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
         <Border x:Name="PadBorder"
             BorderBrush="White" BorderThickness="1" CornerRadius="3">
-            <DockPanel LastChildFill="False">
-                <TextBlock x:Name="ControllerIndexTextBlock" DockPanel.Dock="Top"/>
-
-                <TextBlock x:Name="BpmTextBlock" DockPanel.Dock="Bottom"/>
-            </DockPanel>
-
-            
+            <TextBlock x:Name="ControllerIndexTextBlock"/>
             
         </Border>
     </Grid>
