Send a animation to a midi pad

--- a/StellaServer/Animation/AnimationPanel.xaml
+++ b/StellaServer/Animation/AnimationPanel.xaml
@@ -13,7 +13,11 @@
     <Grid>
         <ListView x:Name="StoryboardListView" 
                   VirtualizingPanel.IsVirtualizing="False">
-
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                </Style>
+            </ListView.ItemContainerStyle>
         </ListView>
     </Grid>
 </reactiveUi:ReactiveUserControl >
