--- a/StellaServer/Setup/SetupPanel.xaml
+++ b/StellaServer/Setup/SetupPanel.xaml
@@ -18,12 +18,7 @@
             <ListView>
                 <ListViewItem>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Server ip:"/>
-                        <TextBox x:Name="IpTextBox" 
-                                 Margin="10,0,0,0" 
-                                 Width="100" ></TextBox>
-                        <TextBlock Text="tcp port:"
-                                   Margin="10,0,0,0"/>
+                        <TextBlock Text="Broadcast port:"/>
                         <TextBox x:Name="TcpPortTextBox" 
                                  Width="50" 
                                  Margin="10,0,0,0"></TextBox>
