--- a/StellaVisualizer/Client/ClientViewerControl.xaml
+++ b/StellaVisualizer/Client/ClientViewerControl.xaml
@@ -7,9 +7,7 @@
              d:DataContext="{d:DesignInstance client:ClientViewerViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
-    <UniformGrid Rows="{Binding GridRows}" Columns="{Binding GridColumns}" >
-        <!--Child controls are set in code behind-->
-        <UniformGrid Rows="{Binding ChildGridRows}" Columns="{Binding ChildGridColumns}" Name="Row1"/>
-        <UniformGrid Rows="{Binding ChildGridRows}" Columns="{Binding ChildGridColumns}" Name="Row2"/>
+    <UniformGrid x:Name="MainGrid">
+       
     </UniformGrid>
 </UserControl>
