Added a control to measure the bpm and dispaly the bpm.

--- a/StellaVisualizer/Server/ServerControlPanelControl.xaml
+++ b/StellaVisualizer/Server/ServerControlPanelControl.xaml
@@ -40,16 +40,17 @@
 
         <Grid Grid.Row="3" MinHeight="50" MinWidth="50" 
               Background="White"
+              x:Name="TheBpmGrid"
               MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
-            <Border x:Name="BpmBorder" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <UniformGrid HorizontalAlignment="Center" VerticalAlignment="Center"
-                             Columns="2">
-                    <TextBlock Text="bpm:"></TextBlock>
-                    <TextBlock Text="{Binding BpmViewModel.Bpm, StringFormat={}{0:F2}}"></TextBlock>
-                    <TextBlock Text="interval:"></TextBlock>
-                    <TextBlock Text="{Binding BpmViewModel.Interval}"></TextBlock>
-                </UniformGrid>
-            </Border>
+            <UniformGrid HorizontalAlignment="Center" VerticalAlignment="Center"
+                         Background="White"
+                         Columns="2">
+                <TextBlock Text="bpm:"></TextBlock>
+                <TextBlock Text="{Binding BpmViewModel.Bpm, StringFormat={}{0:F2}}"></TextBlock>
+                <TextBlock Text="interval:"></TextBlock>
+                <TextBlock Text="{Binding BpmViewModel.Interval}"></TextBlock>
+                <Button x:Name="ToggleBpmTransformationButton" Content="Start" VerticalAlignment="Center" Click="Start_OnClick"></Button>
+            </UniformGrid>
         </Grid>
 
 
