--- a/StellaServer/BpmControl.xaml
+++ b/StellaServer/BpmControl.xaml
@@ -2,16 +2,21 @@
                                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                 xmlns:reactiveUi="http://reactiveui.net"
-                                xmlns:stellaServer="clr-namespace:StellaServer">
+                                xmlns:stellaServer="clr-namespace:StellaServer"
+                                Background="DarkSlateGray"
+                                BorderBrush="DarkGray"
+                                BorderThickness="1"
+                                MinWidth="100" MinHeight="100"
+                                MouseLeftButtonDown="BpmControl_OnMouseLeftButtonDown">
             
     <DockPanel>
-        <DockPanel DockPanel.Dock="Left" LastChildFill="False">
+        <DockPanel DockPanel.Dock="Left" LastChildFill="False" Margin="5">
             <TextBlock DockPanel.Dock="Top">
                 <TextBlock Text="BPM:"/>
                 <TextBlock x:Name="BpmTextBlock"/>
             </TextBlock>
             <TextBlock DockPanel.Dock="Top">
-                <TextBlock Text="BPM:"/>
+                <TextBlock Text="Interval:"/>
                 <TextBlock x:Name="IntervalTextBlock"/>
             </TextBlock>
         </DockPanel>
