--- a/StellaServer/Transformations/TransformationControl.xaml
+++ b/StellaServer/Transformations/TransformationControl.xaml
@@ -12,7 +12,8 @@
              d:DesignHeight="300" d:DesignWidth="800">
     <DockPanel Margin="50,10" HorizontalAlignment="Center">
 
-        <stellaServer:BpmControl x:Name="TheBpmControl"/>
+        <stellaServer:BpmControl x:Name="TheBpmControl"
+                                 Margin="0,0,10,0"/>
 
         <ToggleButton x:Name="PauseButton">
             <materialDesign:PackIcon Kind="Pause" />
