--- a/StellaServer/MainWindow.xaml
+++ b/StellaServer/MainWindow.xaml
@@ -14,6 +14,7 @@
        TextElement.FontWeight="Medium"
        TextElement.FontSize="14"
        FontFamily="{materialDesign:MaterialDesignFont}"
+       Icon="Resources\stella_icon.ico"
        Title="Stella Server" Height="450" Width="800">
     <reactiveUi:ViewModelViewHost x:Name="ViewModelViewHost"
                                   HorizontalAlignment="Stretch" 
